fix: floating mobile navbar and enforced z-index

--- a/src/index.css
+++ b/src/index.css
@@ -819,3 +819,7 @@
     padding-bottom: env(safe-area-inset-bottom) !important;
   }
 }
+
+.pb-safe {
+  padding-bottom: env(safe-area-inset-bottom) !important;
+}
